bk_ida/gccida/g1/optimize_sibling_and_tail_recursive_calls
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1069:4: error: expected ';' after expression
rtx v33; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1069:5: error: use of undeclared identifier 'v33'
rtx v33; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1070:4: error: expected ';' after expression
rtx v34; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1070:5: error: use of undeclared identifier 'v34'
rtx v34; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1074:4: error: expected ';' after expression
rtx v38; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1074:5: error: use of undeclared identifier 'v38'
rtx v38; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1075:4: error: expected ';' after expression
rtx v39; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1075:5: error: use of undeclared identifier 'v39'
rtx v39; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1077:4: error: expected ';' after expression
rtx i; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1077:5: error: use of undeclared identifier 'i'
rtx i; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1079:4: error: expected ';' after expression
rtx j; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1079:5: error: use of undeclared identifier 'j'
rtx j; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1081:4: error: expected ';' after expression
rtx rtl; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1081:5: error: use of undeclared identifier 'rtl'; did you mean 'rtx'?
rtx rtl; // rax 
    ^~~
    rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1068:18: note: 'rtx' declared here
 struct rtx_def *rtx; // rcx 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1082:4: error: expected ';' after expression
rtx orig_insn; // [rsp+0h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1082:5: error: use of undeclared identifier 'orig_insn'; did you mean 'emit_insn'?
rtx orig_insn; // [rsp+0h] [rbp-68h] 
    ^~~~~~~~~
    emit_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/rtl.h:1334:12: note: 'emit_insn' declared here
extern rtx emit_insn                    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1083:4: error: expected ';' after expression
rtx orig_insna; // [rsp+0h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1083:5: error: use of undeclared identifier 'orig_insna'
rtx orig_insna; // [rsp+0h] [rbp-68h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/sibcall.c:1084:4: error: expected ';' after expression
rtx orig_insnb; // [rsp+0h] [rbp-68h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/optimize_sibling_and_tail_recursive_calls/src/obj/sibcall.o] Error 1
